# konstanz-open-data-api

./: .gitignore  .idea  CURRENT_PACKAGE_LIST.csv  LICENSE  MANIFEST.in  README.md  names.csv  setup.cfg  test.py
.github/workflows/: ci.yaml
opencity/: API.py  API_helper.py  CURRENT_PACKAGE_LIST.csv  __init__.py  basic_fetcher.py  config.py  fetch_dataset_list.py  get_latest_packages.py  json_fetcher.py  kml_fetcher.py  opencity.py  shp_fetcher.py  test.py  txt_fetcher.py
opencity/fetcher/: basic_fetcher.py  csv_fetcher.py  json_fetcher.py  kml_fetcher.py  shp_fetcher.py  txt_fetcher.py  xls_fetcher.py
opencity/tests/: test_dataset_url_fetcher.py  test_functional.py  test_get_data.py  test_save_data.py  test_show_data.py
opencity/tests/test_API_helper/: test_fetch_helper.py  test_id_helper.py  test_show_data_helper.py
opencity/tests/test_fetcher/: test_basic_fetcher.py  test_csv_fetcher.py  test_json_fetcher.py  test_kml_fetcher.py  test_shp_fetcher.py  test_txt_fetcher.py  xls_fetcher.py
playground/: API.py  API_helper.py  CURRENT_PACKAGE_LIST.csv  CURRENT_PACKAGE_LIST.json  basic_fetcher.py  config.py  csv_fetcher.py  dataset_fetcher.py  fetch_dataset_list.py  fetch_helper.py  fetch_txt.py  get_latest_packages.py  json_fetcher.py  kml_fetcher.py  package_explore.py  shp_fetcher.py  txt_fetcher.py  xls_fetcher.py
