[metadata]
name = Open City
version = file: opencity/VERSION
description = Client for OpenData DKAN-API
long_description = file: README.md
licence: MIT
author = Silke Husse, Rahkakavee Baskaran, Birke Pfeifle, Tilman Kerl
author_email = tilmankerl@protonmail.com

[options]
python_requires = >= 3.6
packages = opencity
include_package_data = true
install_requires =
    requests
    pandas
