[metadata]
name = opencity
version = file: opencity/VERSION
description = Client for OpenData DKAN-API
long_description = file: README.md
licence: MIT
author = Silke Husse, Rahkakavee Baskaran, Birke Pfeifle, Tilman Kerl
author_email = konstanz@correlaid.org

[options]
python_requires = >= 3.6
packages = opencity
include_package_data = true
install_requires =
    requests
    pandas
    geopandas
    xlrd
    tqdm
    colorama
    fiona
    tabulate
    tk
    tksheet
    numpy